# dot-restrict-scopes

./: .git-blame-ignore-revs  LICENSE  MANIFEST.in  pyproject.toml  setup.py
dot_restrict_scopes/: admin.py  forms.py  models.py  scopes.py
dot_restrict_scopes/migrations/: 0001_initial.py  0002_auto_20220207_1359.py  0003_auto_20230814_1112.py  0003_auto_20231003_1607.py  0004_alter_restrictedapplication_hash_client_secret.py
