[tool.poetry]
name = "dot-restrict-scopes"
version = "1.0.0"
description = "Django OAuth Toolkit extension to restrict the scopes available for an application."
authors = ["Matt Pryor <matt.pryor@stfc.ac.uk>"]
keywords = [
    "django",
    "oauth",
    "restrict",
    "application",
    "scopes",
]
license = "BSD-3-CLAUSE"
readme = "README.md"
packages = [{include = "dot_restrict_scopes"}]
classifiers = [
    "Programming Language :: Python",
    "Framework :: Django",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
]

[tool.poetry.dependencies]
python = "^3.9"
django = "~3.2"
django-oauth-toolkit = "~1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
